# maths_utils_cpp

./: CMakeLists.txt  buildwin.bat
src/: CMakeLists.txt  newton_method.cpp  newton_method.hpp
